--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06">
         </a-plane>
         <a-plane position="0 0.1 0" rotation="-90 0 0" width="73" height="0.25" color="#FFFFFF"></a-plane>
-        <a-entity camera="" wasd-controls="" position="0 1.6 5" rotation="6.531718864491366 -66.80687891225398 0" look-controls="pointerLockEnabled:true;hmdEnabled:false" aframe-injected="" data-aframe-inspector-original-camera=""></a-entity>
+        <a-entity camera="" wasd-controls="" position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false;" aframe-injected="" data-aframe-inspector-original-camera="" vive-controls="model:false;rotationOffset:90" oculus-touch-controls="model:false;rotationOffset:90"
+            windows-motion-controls="hand:left;model:false;" vr-mode-ui="enabled:false;"></a-entity>
         <a-sky color="#61bafa"></a-sky>
     </a-scene>
 </body>
