--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
-    <meta name="description" content="Hello, World! - A-Frame">
+    <title>A-Frame Soccer</title>
+    <meta name="description" content="A-Frame Soccer">
     <script src="components/aframe.min.js"></script>
 </head>
 
@@ -14,11 +14,10 @@
         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
         <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
         <!--Soccer Field-->
-        <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06">
-        </a-plane>
+        <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06"></a-plane>
         <a-plane position="0 0.1 0" rotation="-90 0 0" width="73" height="0.25" color="#FFFFFF"></a-plane>
-        <a-camera wasd-controls position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false;"></a-entity>
-            <a-sky color="#61bafa"></a-sky>
+        <a-camera wasd-controls position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false"></a-camera>
+        <a-sky color="#61bafa"></a-sky>
     </a-scene>
 </body>
 
