Added a line on the field

--- a/Soccer_App/www/index.html
+++ b/Soccer_App/www/index.html
@@ -16,6 +16,7 @@
         <!--Soccer Field-->
         <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06"></a-plane>
         <a-plane position="0 0.1 0" rotation="-90 0 0" width="73" height="0.25" color="#FFFFFF"></a-plane>
+        <a-plane position="0 0.1 0" rotation="0 0 0" width="73" height="0.25" color="#FFFFFF"></a-plane>
         <a-camera wasd-controls position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false"></a-camera>
         <a-sky color="#61bafa"></a-sky>
     </a-scene>
