--- a/Soccer_App/www/index.html
+++ b/Soccer_App/www/index.html
@@ -12,7 +12,7 @@
     <a-scene vr-mode-ui="enabled: false" keyboard-shortcuts="enterVR: false">
         <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2E5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#000099"></a-cylinder>
         <!--Soccer Field-->
         <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06"></a-plane>
         <a-plane position="0 0.1 0" rotation="-90 0 0" width="73" height="0.25" color="#FFFFFF"></a-plane>
