--- a/Soccer_App/www/index.html
+++ b/Soccer_App/www/index.html
@@ -22,7 +22,7 @@
             <a-box position="36.5 0 0" rotation="0 90 0" length="110" width="110" color="#ABCDEF" static-body></a-box>
             <a-box position="-36.5 0 0" rotation="0 90 0" length="110" width="110" color="#ABCDEF" static-body></a-box>
         </a-entity>
-        <a-camera wasd-controls="acceleration: 200" position="0 1.6 5" look-controls="pointerLockEnabled:false;hmdEnabled:false" static-body>
+        <a-camera wasd-controls="acceleration: 200" position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false" static-body>
             <a-box material="color: #4CC3D9; opacity: 0; transparent: true; visible: false" position="0 -1.6 0" rotation="0 0 0" scale="0.6 0.6 0.6" static-body></a-box>
         </a-camera>
         <a-sky color="#61bafa"></a-sky>
