--- a/Soccer_App/www/index.html
+++ b/Soccer_App/www/index.html
@@ -19,8 +19,14 @@
             <a-plane position="0 0 0" rotation="-90 0 0" width="73" height="110" color="#208a06" static-body></a-plane>
             <a-plane position="0 0.001 0" rotation="-90 0 0" width="73" height="0.25" color="#FFFFFF" static-body></a-plane>
             <a-plane position="0 0.001 10" rotation="-90 0 0" width="73" height="0.25" color="#ABCCCC" static-body></a-plane>
+            <!--Right Wall-->
             <a-box position="36.5 0 0" rotation="0 90 0" length="110" width="110" color="#ABCDEF" static-body></a-box>
+            <!--Left Wall-->
             <a-box position="-36.5 0 0" rotation="0 90 0" length="110" width="110" color="#ABCDEF" static-body></a-box>
+            <!--Front Wall-->
+            <a-box position="0 0 -55" rotation="0 0 0" length="73" width="73" color="" static-body></a-box>
+            <!--Back Wall-->
+            <a-box position="0 0 55" rotation="0 0 0" length="73" width="73" color="" static-body></a-box>
         </a-entity>
         <a-camera wasd-controls="acceleration: 200" position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false" static-body>
             <a-box material="color: #4CC3D9; opacity: 0; transparent: true; visible: false" position="0 -1.6 0" rotation="0 0 0" scale="0.6 0.6 0.6" static-body></a-box>
