Reorganized The Project Structure
Added a menu and instructions page.
The game is almost ready, just need to add the Goals and the point system (Hardest Part Of Them All) and change the Controls from VR to touchpad on the mobile device, as this will be exported to Android via Phonegap (Cordova). The application will have continual work.

--- a/Soccer_App/www/soccer.html
+++ b/Soccer_App/www/soccer.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>A-Frame Soccer</title>
     <meta name="description" content="A-Frame Soccer">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/theme.css" rel="stylesheet" />
     <script src="components/aframe.min.js"></script>
     <script src="components/aframe-physics-system.min.js"></script>
 </head>
@@ -43,6 +45,8 @@
                     document.querySelector("#soccerBall").setAttribute("position", "0 1.25 -5");
                 }
             };
+            AFRAME.scenes[0].exitVRBound();
+            AFRAME.scenes[0].exitVRTrueBound();
         </script>
     </a-scene>
 </body>
