--- a/Soccer_App/www/soccer.html
+++ b/Soccer_App/www/soccer.html
@@ -47,6 +47,16 @@
             <a-box position="0 0 -55" rotation="0 0 0" height="10" width="73" color="" static-body></a-box>
             <!--Back Wall-->
             <a-box position="0 0 55" rotation="0 0 0" height="10" width="73" color="" static-body></a-box>
+            <!--Goal Post 1-->
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
+            <a-cylinder position="0 0 0" rotaion="0 0 0" height="10" width="1" color="#FFFFFF"></a-cylinder>
         </a-entity>
         <a-camera wasd-controls="acceleration: 200" position="0 1.6 5" look-controls="pointerLockEnabled:true;hmdEnabled:false" static-body>
             <a-box material="color: #4CC3D9; opacity: 0; transparent: true; visible: false" position="0 -1.6 0" rotation="0 0 0" scale="3 1 3" static-body></a-box>
