--- a/Soccer_App/www/menu.html
+++ b/Soccer_App/www/menu.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<header>Main Menu</header>
     <button redir="instructions.html">Play Now!!</button>
     <button redir="instructions.html">Instructions</button>
     <button onclick="window.close()">Exit</button>
